# expmnt

./: .gitmodules  LICENSE  README.md
rust/: Cargo.toml
rust/bitdemo/: Cargo.toml
rust/bitdemo/src/: lib.rs  main.rs
rust/src/: lib.rs
