[package]
name = "expmnt"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
bitdemo = { path = "./bitdemo" }
cons = { path = "./cons-rs" }
mapstruct = { path = "mapstruct" }
proc-macro-playground = { path = "./proc-macro-playground" }
rust-primes = { path = "prime-sieves" }
rustcomp = { path = "./rustcomp" }
rustini = { path = "rustini" }
